--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,6 @@ AppPackages/
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+
+
+TestFiles/*.class
